--- a/app/globals.css
+++ b/app/globals.css
@@ -3,25 +3,6 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap');
 
-@font-face {
-  font-family: "Splither";
-  src: url("/fonts/SplitherNormal-aoM9.otf") format("opentype");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Bonjour";
-  src: url("/fonts/BonjourDeJongSans-vmgED.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Magical";
-  src: url("/fonts/MagicalStylishSansSerifDemo-qLKq.otf") format("opentype");
-  font-weight: normal;
-  font-style: normal;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -79,4 +60,15 @@ body {
   position: absolute;
   left: 2%;
   bottom: 0; /* Align it to the bottom */
+}
+
+/* Hide scrollbar in WebKit browsers */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar in Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
